--- a/ProductionDragger/Components/Pages/Home.razor
+++ b/ProductionDragger/Components/Pages/Home.razor
@@ -1,7 +1,35 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<link href="css/Home.css" rel="stylesheet" />
 
-<h1>Hello, world!</h1>
+<PageTitle>Productie sleep app</PageTitle>
 
-Welcome to your new app.
+<div class="container">
+    <div id="left" >
+         @foreach (var item in leftList)
+         {
+             <div class="list" 
+                  draggable="true" 
+                  >@item</div>
+         }
+    </div>
+    <div id="right">
+         @foreach (var item in rightList)
+         {
+             <div class="list" 
+                  draggable="true" 
+             >@item</div>
+         }
+    </div>
+</div>
+
+@code
+{
+    private List<string> leftList = new()
+    {
+        "List item 1", "List item 2", "List item 3", "List item 4"
+    };
+
+    private List<string> rightList = new();
+    
+}
